--- a/presets/babel-preset-unity/package.json
+++ b/presets/babel-preset-unity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-unity",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Default presets of Babel configs used by Unity",
   "files": [
     ".babelrc",
@@ -8,14 +8,11 @@
   ],
   "scripts": {
     "postinstall": "CWD=$(node -p 'process.cwd().split(\"node_modules\")[0]'); ln -f ./.babelrc $CWD/.babelrc"
-   },
+  },
   "dependencies": {
+    "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.4",
-    "babel-register": "^6.14.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2016": "^6.11.3",
-    "babel-preset-react": "^6.11.1",
     "babel-plugin-lodash": "^3.2.9",
     "babel-plugin-syntax-trailing-function-commas": "^6.8.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
@@ -23,7 +20,13 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
     "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-polyfill": "^6.13.0"
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2016": "^6.11.3",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
+    "eslint": "^3.9.1",
+    "webpack": "^1.13.1"
   },
   "repository": {
     "type": "git",
