--- a/presets/webpack-preset-unity/package.json
+++ b/presets/webpack-preset-unity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-preset-unity",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Default presets of webpack configs used by Unity",
   "files": [
     "README.md",
@@ -9,23 +9,25 @@
   "main": "index.js",
   "dependencies": {
     "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.4",
+    "baggage-loader": "^0.2.4",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.9.1",
+    "eslint-loader": "^1.6.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lodash-webpack-plugin": "^0.10.2",
     "postcss-cssnext": "^2.8.0",
+    "postcss-loader": "^1.1.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dashboard": "^0.2.0",
-    "webpack-dev-server": "^1.14.1",
-    "html-webpack-plugin": "^2.22.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "eslint-loader": "^1.6.1",
-    "style-loader": "^0.13.1",
-    "babel-loader": "^6.2.4",
-    "url-loader": "^0.5.7",
-    "postcss-loader": "^1.1.0",
-    "json-loader": "^0.5.4",
-    "file-loader": "^0.9.0",
-    "css-loader": "^0.25.0",
-    "baggage-loader": "^0.2.4",
-    "eslint": "^3.9.1"
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": {
     "type": "git",
