--- a/presets/webpack-preset-unity/package.json
+++ b/presets/webpack-preset-unity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-preset-unity",
-  "version": "1.2.0-0",
+  "version": "2.0.0",
   "description": "Default presets of webpack configs used by Unity",
   "files": [
     "README.md",
